src/tests/snapshots/niri__tests__window_opening__check_target_size@dwU-dhF500.snap
---
source: src/tests/window_opening.rs
description: "config:\nwindow-rule {\n    default-column-width {  }\n    default-window-height { fixed 500; }\n}"
expression: snapshot
---
initial configure:
size: 0 × 500, bounds: 1248 × 688, states: []

post-map configures:
size: 1 × 500, bounds: 1248 × 688, states: [Activated]
